test/tests/errors/error-class-const-rhs-invalid.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = "test";
}